# csg_testbed

./: CMakeLists.txt  LICENSE  README.md
include/: csg_node.h  csg_node_factory.h  csg_operator.h  csg_primitive.h  math_helper.h  serializable.h
src/: csg_node_factory.cpp  csg_operator.cpp  csg_primitive.cpp  main.cpp
